cfn_benchmark/cfn_templates/aws-ia__cfn-mp-ql-rules/test/fixtures/templates/stackhelper/quickstart-f5-big-ip-virtual-edition/templates/application.template
AWSTemplateFormatVersion: '2010-09-09'
Description: >-
  This template deploys a small demo application which will serve as an application pool on the BIG-IP.  **WARNING** This template creates an auto scale group and associated security group. You will be billed for the AWS resources used if you create a stack from this template.
Outputs:
  appAutoscaleGroupName:
    Value: !Ref 'AppAutoscaleGroup'
Mappings:
  AWSAMIRegionMap:
    AMI:
      US1804HVM: ubuntu-images-hvm-ssd-ubuntu-bionic-18.04-amd64-server-20180814
    ap-northeast-1:
      US1804HVM: ami-0f6b4f4104d26f399
    ap-northeast-2:
      US1804HVM: ami-02b4a5559ce53a570
    ap-south-1:
      US1804HVM: ami-0245841fc4b40e22f
    ap-southeast-1:
      US1804HVM: ami-07febfdfb4080320e
    ap-southeast-2:
      US1804HVM: ami-04a0f7552cff370ba
    ca-central-1:
      US1804HVM: ami-0972a0d3135cf1fc0
    eu-central-1:
      US1804HVM: ami-09356619876445425
    eu-west-1:
      US1804HVM: ami-04c58523038d79132
    eu-west-2:
      US1804HVM: ami-00622b440d92e55c0
    eu-west-3:
      US1804HVM: ami-0b70d1460d5c7a299
    sa-east-1:
      US1804HVM: ami-049f5d88d2d436431
    us-east-1:
      US1804HVM: ami-00a208c7cdba991ea
    us-east-2:
      US1804HVM: ami-059d836af932792c3
    us-west-1:
      US1804HVM: ami-0f42d8c4eb586ccf7
    us-west-2:
      US1804HVM: ami-0a7d051a1c4b54f65
Parameters:
  application:
    Description: Name of the  application used for creating objects. ex. service1
    Type: String
    MaxLength: 20
    Default: f5demoapp
  applicationPoolTagKey:
    Description: Application pool tag key
    Type: String
  applicationPoolTagValue:
    Description: Application pool tag value
    Type: String
  applicationSubnets:
    Description: Application Subnet IDs
    Type: List<AWS::EC2::Subnet::Id>
  containerName:
    Description: Container Name
    Type: String
    Default: f5devcentral/f5-demo-app:latest
  deploymentName:
    Description: Name the template used to create object names
    Type: String
    MaxLength: 25
    Default: f5awsqs
  instanceType:
    AllowedValues:
      - t2.small
    ConstraintDescription: must be a valid EC2 instance type
    Default: t2.small
    Description: App EC2 instance type
    Type: String
  sshKey:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
  restrictedSrcAddress:
    Description: ' The IP address range that can be used to SSH to the EC2 instances'
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  vpc:
    Description: Common VPC for whole deployment
    Type: AWS::EC2::VPC::Id
Resources:
  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref 'vpc'
      GroupDescription: Enable SSH access via port 22 and enable access to web on 80 and 443
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref 'restrictedSrcAddress'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref 'restrictedSrcAddress'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref 'restrictedSrcAddress'
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'deploymentName'
              - '-'
              - !Ref 'application'
              - -appsecuritygroup
        - Key: !Ref 'applicationPoolTagKey'
          Value: !Ref 'applicationPoolTagValue'
  AppLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !FindInMap
        - AWSAMIRegionMap
        - !Ref 'AWS::Region'
        - US1804HVM
      InstanceType: !Ref 'instanceType'
      AssociatePublicIpAddress: false
      KeyName: !Ref 'sshKey'
      SecurityGroups:
        - !Ref 'AppSecurityGroup'
  AppAutoscaleGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'applicationPoolTagValue'
              - -autoscale-instance-
              - !Ref 'deploymentName'
          PropagateAtLaunch: true
        - Key: !Ref 'applicationPoolTagKey'
          Value: !Ref 'applicationPoolTagValue'
          PropagateAtLaunch: true
        - Key: containerName
          Value: !Ref 'containerName'
          PropagateAtLaunch: true
      VPCZoneIdentifier: !Ref 'applicationSubnets'
      Cooldown: '600'
      HealthCheckGracePeriod: 120
      LaunchConfigurationName: !Ref 'AppLaunchConfig'
      MaxSize: '1'
      MinSize: '1'
      MetricsCollection:
        - Granularity: 1Minute
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MaxBatchSize: '1'
        MinInstancesInService: '1'
        PauseTime: PT3M
